# High-Performance-Computing

./: README.md
serie_1/: Readme.md
serie_2/: Readme.md  a.out  arrays_and_pointers.cpp
serie_3/: answers.md
serie_3/code/: Makefile  README.rst  bench.sh  driver_asimd.cpp  plot.sh  test.txt
serie_3/code/data/: scaling_cores_1.txt  scaling_cores_10.txt  scaling_cores_100.txt  scaling_cores_110.txt  scaling_cores_120.txt  scaling_cores_130.txt  scaling_cores_140.txt  scaling_cores_150.txt  scaling_cores_159.txt  scaling_cores_160.txt  scaling_cores_2.txt  scaling_cores_20.txt  scaling_cores_3.txt  scaling_cores_30.txt  scaling_cores_4.txt  scaling_cores_40.txt  scaling_cores_5.txt  scaling_cores_50.txt  scaling_cores_6.txt  scaling_cores_60.txt  scaling_cores_7.txt  scaling_cores_70.txt  scaling_cores_8.txt  scaling_cores_80.txt  scaling_cores_9.txt  scaling_cores_90.txt  scaling_pinned_threads_1.txt  scaling_pinned_threads_10.txt  scaling_pinned_threads_100.txt  scaling_pinned_threads_110.txt  scaling_pinned_threads_120.txt  scaling_pinned_threads_130.txt  scaling_pinned_threads_140.txt  scaling_pinned_threads_150.txt  scaling_pinned_threads_159.txt  scaling_pinned_threads_160.txt  scaling_pinned_threads_2.txt  scaling_pinned_threads_20.txt  scaling_pinned_threads_3.txt  scaling_pinned_threads_30.txt  (+12 more)
serie_3/code/kernels/: distance_latency_src_asimd_fmla_sp.s  (+8 more)
serie_4/: CMakeLists.txt  loesung.txt
serie_4/catch/: CMakeLists.txt
serie_4/small_gemms/: CMakeLists.txt
serie_4/small_gemms/include/: gemm_ref.h
serie_4/small_gemms/src/: driver_small_gemms.cpp  gemm_ref.cpp
serie_4/test/: CMakeLists.txt  main.cpp  small_gemms_tests.cpp
(+17 files in other folders)
